[package]
name = "yaci"
version = "0.1.0"
authors = ["Filippo Biondi <filippo.biondi@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
pixels = "0.4.0"
winit = "0.25"
winit_input_helper = "0.10"
